# kenya-policy-pressure-index

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
data/: .gitkeep
logs/: .gitkeep
src/kppi/: __init__.py  config.py
src/kppi/dashboard/: app.py
src/kppi/data/: __init__.py  pipeline.py
src/kppi/data/fetchers/: __init__.py  base.py  eurobond.py  exchangerate.py  forex_reserves.py  gdelt.py  kenya_news.py  market_stress.py  mock.py  mpesa.py  nasi.py  worldbank.py
src/kppi/index/: __init__.py  calculator.py  normalizer.py
src/kppi/notifications/: __init__.py  email.py
src/kppi/scheduler/: jobs.py
src/kppi/storage/: database.py
tests/: test_fetchers.py  test_index.py  test_storage.py
